--- a/index.html
+++ b/index.html
@@ -1,49 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Diwali Game</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="game-container">
-        <h1>🪔 🪔...Happy Diwali.. 🪔 🪔</h1>
-        <p>Light all the diyas and burst the crackers!</p>
-        <button id="startButton">Start Game</button>
-
-        <div class="scoreboard">
-            <p>Score: <span id="score">0</span></p>
-        </div>
-
-        <div class="diyas-container">
-            <h4>Light All the Diyas 🪔 </h4>
-        </div>
-
-        <div class="crackers-container">
-            <h4>Burst All the Crackers 🎆</h4>
-        </div>
-    </div>
-
-      <div class="rangoli-area" id="rangoliArea">
-        
-         <div class="pencil">✏️</div>
-        <h2>Draw Your Rangoli</h2>
-        <p>Click in the box below to start your rangoli pattern!</p>
-        <canvas id="rangoliCanvas"></canvas>
-    </div>
-</div> -->
-
-    <!-- Congratulatory Message Overlay -->
-    <!-- <div class="congratulations-overlay" id="congratulationsOverlay">
-        <h2>🎉 Congratulations! 🎉</h2>
-        <p>May this Diwali bring you joy, prosperity, and endless light in your life!</p>
-    </div> -->
-
-    <!-- <script src="script.js"></script>
-</body> -->
-<!-- </html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -103,6 +57,8 @@
 
     <!-- Fireworks Container -->
     <div class="firework-container" id="fireworks"></div>
+
+    <audio id="crackerSound" src="sounds/crackers.mp3" preload="auto"></audio>
 
     <script src="script.js"></script>
 </body>
